--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
     "sass": "^1.79.4",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.4"
   },
